objects/BW_Workstream__c.object
<CustomObject>
    <fields>
        <fullName>BW_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BW_MVP_Definition__c</fullName>
        <label>MVP</label>
        <length>30000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BW_Product_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Workstreams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Workstream</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BW_Product_Leader__c</columns>
        <columns>BW_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Workstream Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workstreams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>